# mdnscpp

./: .travis.yml  CMakeLists.txt  LICENSE  Readme.md
.circleci/: config.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: libuv.cmake
cmake/libuv/: CMakeLists.txt
include/: Client.hpp  DnsPacket.hpp  Logger.hpp
src/: Client.cpp  DnsPacket.cpp  Logger.cpp
tests/: CMakeLists.txt  tests.cpp
utils/: CMakeLists.txt  nhlookup.cpp
